Fixed Ouput Text spacing

--- a/styles/Avatar.module.css
+++ b/styles/Avatar.module.css
@@ -22,14 +22,14 @@
     text-align: center;
     margin: 1rem 0;
     font-size: var(--heading-font-size);
-    padding: 1rem 0;
+    padding: 0.3em 0.3em;
     color: var(--primary-color-lighter);
     background-color: var(--accent-color-darker);
 }
 .symbol {
-    font-size: 2rem;
-    margin-top: 0.3rem;
-    margin-right: 1rem;
+    font-size: 1.1em;
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
     display: inline-block;
 }
 .highlight {
@@ -55,6 +55,9 @@
     background-color: #ff2300;
 }
 .heading {
+    margin: 0 0 1em 0;
+    width: 100%;
+    text-align: center;
     padding: calc(var(--font-size) * 0.5) 0;
     font-size: var(--heading-font-size);
     color: var(--primary-color-lighter);
